<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <Button
        android:id="@+id/btnOne"
        android:layout_marginVertical="8dp"
        android:text="@string/button_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnTwo"
        android:text="@string/button_two"
        android:layout_marginVertical="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnThree"
        android:text="@string/button_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp" />

    <Button
        android:id="@+id/btnFour"
        android:text="@string/button_four"
        android:layout_width="match_parent"
        android:layout_marginVertical="8dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnFive"
        android:text="@string/button_five"
        android:layout_marginVertical="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSix"
        android:layout_marginVertical="8dp"
        android:text="@string/button_six"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSeven"
        android:layout_marginVertical="8dp"
        android:text="RecyclerViewNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilTelp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_local_phone_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="No.Telp"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ivTelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_arrow_forward_ios_24"
            app:layout_constraintBottom_toBottomOf="@+id/ilTelp"
            app:layout_constraintEnd_toEndOf="@+id/ilTelp"
            app:layout_constraintTop_toTopOf="@+id/ilTelp"
            android:contentDescription="Telp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>